--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <p>Welcome!</p>
                 <div>
                     <p>Hover over the image:</p>
-                    <img src="lava.png" alt="lava" width="500" height="500">
+                    <img src="lava.jpg" alt="lava" width="500" height="500">
                     <!--이미지 출처:volcano-eruption-and-lava-drawing-vector-32449804.html -->
                 </div>
             </div>
