--- a/index.html
+++ b/index.html
@@ -110,7 +110,14 @@
                 </div>
             </div>
             <div>
-                <h4>Description</h4>
+                <h4>"화성암은 마그마가 식어서 형성된 암석이다. 
+                    암석의 성분에 따라서 염기성암과 산성암으로 분류한다. 
+                    염기성암은 규소에 비해 산소의 함량이 낮은 암석으로, 대체로 어두운 색을 띤다. 
+                    이에 비해 산성암은 규소에 비해 산소의 함량의 높은 암석으로, 밝은 색을 띤다.
+                    또한, 생성시의 깊이에 따라서 화산암과 심성암으로 분류한다. 
+                    화산암은 용암이 지표에 분출되었거나, 지표 부근에서 급격하게 냉각되어 형성된 암석으로, 입자의 크기가 작은 편이다. 
+                    심성암은 상대적으로 깊은 곳에서 천천히 냉각되었기 때문에, 입자의 크기가 큰 편이다.
+                    화성암을 이루는 마그마는 맨틀이나 지각의 일부가 지하 심부에서 녹아서 형성된 것이다. 암석은 압력이 낮아지거나, 온도가 높아지거나, 성분이 변할 때 녹을 수 있게 된다."</h4>
             </div>
         </div>
     </div>
