--- a/index.html
+++ b/index.html
@@ -101,10 +101,8 @@
         <div class="col">
             <div>
                 <h3>Igneous Rock</h3>
-                <p>화성암은 마그마가 식어서 만들어진 암석이다</p>
+                <p>Igneous Rock is one of the three main rock types, the others being sedimentary and metamorphic. Igneous rock is formed through the cooling and solidification of magma or lava.</p>
                 <div>
-                    <p></p>
-                    
                     <img src="Rock.jpg" alt="화성암" width="500" height="500">
                     <!--이미지 출처:https://ko.wikipedia.org/wiki/%ED%99%94%EC%84%B1%EC%95%94 -->
                 </div>
