--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <body>
     <h1>암석의 세계</h1>
-    <hr style="background-color: black;"/>
+    <hr style="width:50%;height:10px;border:none;background-color:black;"/>
     <button class="tablink" onclick="openPage('Home', this, 'coral')" id="defaultOpen">Home</button>
     <button class="tablink" onclick="openPage('Astone', this, 'darksalmon')">Igneous Rock(화성암)</button>
     <button class="tablink" onclick="openPage('Bstone', this, 'sandybrown')">Metamorphic Rock(변성암)</button>
