--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 </head>
 
 <body>
-    <h1>암석의 세계</h1>
+    <h1>암석의 세계</h1> <div style="text-align:center">
     <hr style="width:50%;height:10px;border:none;background-color:black;"/>
-    <button class="tablink" onclick="openPage('Home', this, 'coral')" id="defaultOpen">Home</button>
+    <button class="tablink" onclick="openPage('Home', this, 'lightsalmon')" id="defaultOpen">Home</button>
     <button class="tablink" onclick="openPage('Astone', this, 'darksalmon')">Igneous Rock(화성암)</button>
     <button class="tablink" onclick="openPage('Bstone', this, 'sandybrown')">Metamorphic Rock(변성암)</button>
     <button class="tablink" onclick="openPage('Cstone', this, 'orange')">Sedimentary Rock(퇴적암)</button>
@@ -86,7 +86,7 @@
                 <p>Welcome!</p>
                 <div>
                     <p>Hover over the image:</p>
-                    <img src="lava.jpg" alt="lava" width="300" height="300">
+                    <img src="lava.jpg" alt="lava" width="500" height="500">
                     <!--이미지 출처:volcano-eruption-and-lava-drawing-vector-32449804.html -->
                 </div>
             </div>
