--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
     <h1>암석의 세계</h1> <div style="text-align:center">
     <hr style="height:50px;border:none;background-color:black;"/>
     <button class="tablink" onclick="openPage('Home', this, 'lightsalmon')" id="defaultOpen">Home</button>
-    <button class="tablink" onclick="openPage('Astone', this, 'darksalmon')">Igneous Rock(화성암)</button>
-    <button class="tablink" onclick="openPage('Bstone', this, 'sandybrown')">Metamorphic Rock(변성암)</button>
-    <button class="tablink" onclick="openPage('Cstone', this, 'orange')">Sedimentary Rock(퇴적암)</button>
+    <button class="tablink" onclick="openPage('Astone', this, 'darksalmon')">Igneous Rock</button>
+    <button class="tablink" onclick="openPage('Bstone', this, 'sandybrown')">Metamorphic Rock</button>
+    <button class="tablink" onclick="openPage('Cstone', this, 'orange')">Sedimentary Rock</button>
 
     <div id="Home" class="tabcontent">
         <div class="col">
@@ -87,7 +87,6 @@
                 <div>
                     <p>Hover over the image:</p>
                     <img src="lava.jpg" alt="lava" width="500" height="500">
-                    <!--이미지 출처:volcano-eruption-and-lava-drawing-vector-32449804.html -->
                 </div>
             </div>
             <div>
@@ -104,7 +103,6 @@
                 <p>Igneous Rock is one of the three main rock types, the others being sedimentary and metamorphic. Igneous rock is formed through the cooling and solidification of magma or lava.</p>
                 <div>
                     <img src="Rock.jpg" alt="화성암" width="300" height="300">
-                    <!--이미지 출처:https://ko.wikipedia.org/wiki/%ED%99%94%EC%84%B1%EC%95%94 -->
                 </div>
             </div>
             <div>
@@ -121,7 +119,6 @@
                 <div>
                     <p>Hover over the image:</p>
                     <img src="Rock1.jpg" alt="변성암" width="300" height="300">
-                    <!--이미지 출처:https://kr.freepik.com/premium-photo/folded-metamorphic-rock-background_5638375.html -->
                 </div>
             </div>
             <div>
@@ -137,7 +134,6 @@
                 <div>
                     <p>Hover over the image:</p>
                     <img src="Rock2.jpg" alt="퇴적암" width="300" height="300">
-                    <!--이미지 출처:https://ko.wikipedia.org/wiki/%ED%87%B4%EC%A0%81%EC%95%94 -->
                 </div>
             </div>
             <div>
