--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body>
     <h1>암석의 세계</h1> <div style="text-align:center">
     <hr style="height:5px;border:none;background-color:black;"/>
-    <button class="tablink" onclick="openPage('Home', this, 'lightsalmon')" id="defaultOpen">Home</button>
+    <button class="tablink" onclick="openPage('Home', this, 'coral')" id="defaultOpen">Home</button>
     <button class="tablink" onclick="openPage('Astone', this, 'darksalmon')">Igneous Rock</button>
     <button class="tablink" onclick="openPage('Bstone', this, 'sandybrown')">Metamorphic Rock</button>
     <button class="tablink" onclick="openPage('Cstone', this, 'orange')">Sedimentary Rock</button>
