--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </head>
 
 <body>
-    <h1>암석의 세계</h1> <div style="text-align:center">
+    <h1>암석의 세계</h1>
     <hr style="height:5px;border:none;background-color:black;"/>
     <button class="tablink" onclick="openPage('Home', this, 'coral')" id="defaultOpen">Home</button>
     <button class="tablink" onclick="openPage('Astone', this, 'darksalmon')">Igneous Rock</button>
