--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div>
-                <h4></h4>
+                <h4>Igneous Rock is one of the three main rock types, the others being sedimentary and metamorphic. Igneous rock is formed through the cooling and solidification of magma or lava.</h4>
             </div>
         </div>
     </div>
@@ -115,14 +115,13 @@
         <div class="col">
             <div>
                 <h3>Metamorphic Rock</h3>
-                <p>Get in touch, or swing by for a cup of coffee.</p>
+                <p></p>
                 <div>
-                    <p>Hover over the image:</p>
                     <img src="Rock1.jpg" alt="변성암" width="300" height="300">
                 </div>
             </div>
             <div>
-                <h4>Description</h4>
+                <h4>Metamorphic rocks arise from the transformation of existing rock to new types of rock, in a process called metamorphism.</h4>
             </div>
         </div>
     </div>
