--- a/index.html
+++ b/index.html
@@ -83,15 +83,10 @@
         <div class="col">
             <div>
                 <h3>Home</h3>
-                <p>Welcome!</p>
+                <p>Welcome! CWNU 과제용 홈페이지입니다.</p>
                 <div>
-                    <p>Hover over the image:</p>
                     <img src="lava.jpg" alt="lava" width="500" height="500">
                 </div>
-            </div>
-            <div>
-                <h4>Description</h4>
-
             </div>
         </div>
     </div>
