--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
         <div class="col">
             <div>
                 <h3>Igneous Rock</h3>
-                <p>Igneous Rock is one of the three main rock types, the others being sedimentary and metamorphic. Igneous rock is formed through the cooling and solidification of magma or lava.</p>
+                <p>Igneous rock is formed through the cooling and solidification of magma or lava.</p>
                 <div>
                     <img src="Rock.jpg" alt="화성암" width="300" height="300">
                 </div>
             </div>
             <div>
-                <h4>Igneous Rock is one of the three main rock types, the others being sedimentary and metamorphic. Igneous rock is formed through the cooling and solidification of magma or lava.</h4>
+                <h4> <A href = "URL" target = "링크 방법" > 글 내용 </A> </h4>
             </div>
         </div>
     </div>
