--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div id="Cstone" class="tabcontent">
         <div class="col">
             <div>
-                <h3>Sedimentary Rock</h3>
+                <h3>Sedimentary rock is formed by the accumulation or deposition of mineral or organic particles at Earth's surface, followed by cementation.</h3>
                 <p>Who we are and what we do.</p>
                 <div>
                     <p>Hover over the image:</p>
