--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="col">
             <div>
                 <h3>Igneous Rock</h3>
-                <p>Igneous rock is formed through the cooling and solidification of magma or lava.</p>
+                <p> Igneous rock is formed through the cooling and solidification of magma or lava. </p>
                 <div>
                     <img src="Rock.jpg" alt="화성암" width="300" height="300">
                 </div>
@@ -110,13 +110,13 @@
         <div class="col">
             <div>
                 <h3>Metamorphic Rock</h3>
-                <p></p>
+                <p>Metamorphic rocks arise from the transformation of existing rock to new types of rock, in a process called metamorphism.</p>
                 <div>
                     <img src="Rock1.jpg" alt="변성암" width="300" height="300">
                 </div>
             </div>
             <div>
-                <h4>Metamorphic rocks arise from the transformation of existing rock to new types of rock, in a process called metamorphism.</h4>
+                <h4> <A href = "URL" target = "링크 방법" > 글 내용 </A> </h4>
             </div>
         </div>
     </div>
