--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <div>
-                <h4> <A href = "URL" target = "링크 방법" > 글 내용 </A> </h4>
+                <h4> <A href = "URL" target = "https://en.wikipedia.org/wiki/Basalt" > Basalt </A> </h4>
             </div>
         </div>
     </div>
