--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             </div>
             <div>
                 <h4> <A href = "URL" target = "https://en.wikipedia.org/wiki/Basalt" > Basalt </A> </h4>
+                <h4> <A href = "URL" target = "https://en.wikipedia.org/wiki/Granite" > Granite </A> </h4>
             </div>
         </div>
     </div>
