--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                 </div>
             </div>
             <div>
-                <h4> <A href = "URL" target = "https://en.wikipedia.org/wiki/Basalt" > Basalt </A> </h4>
-                <h4> <A href = "URL" target = "https://en.wikipedia.org/wiki/Granite" > Granite </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Basalt" target = "parent" > Basalt </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Granite" target = "parent" > Granite </A> </h4>
             </div>
         </div>
     </div>
