--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <div id="Home" class="tabcontent">
         <div class="col">
             <div>
+                <div style="padding-left: 100px; width: 50%;">
                 <h3>Home</h3>
                 <p>Welcome! CWNU 과제용 홈페이지입니다.</p>
                 <div>
@@ -94,6 +95,7 @@
     <div id="Astone" class="tabcontent">
         <div class="col">
             <div>
+                <div style="padding-left: 100px; width: 50%;">
                 <h3>Igneous Rock</h3>
                 <p> Igneous rock is formed through the cooling and solidification of magma or lava. </p>
                 <div>
@@ -101,6 +103,7 @@
                 </div>
             </div>
             <div>
+                <div style="padding-left: 100px;">
                 <h4> <A href = "https://en.wikipedia.org/wiki/Basalt" target = "parent" > Basalt </A> </h4>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Granite" target = "parent" > Granite </A> </h4>
             </div>
