--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             </div>
             <div>
                 <div style="padding-left: 100px;">
-                <h4> <A href = "https://en.wikipedia.org/wiki/Basalt" target = "parent" > Basalt </A> </h4>
-                <h4> <A href = "https://en.wikipedia.org/wiki/Granite" target = "parent" > Granite </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Basalt" target = "parent" >  &gt; Basalt </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Granite" target = "parent" >  &gt; Granite </A> </h4>
             </div>
         </div>
     </div>
