--- a/index.html
+++ b/index.html
@@ -87,13 +87,11 @@
 
     <div id="Home" class="tabcontent">
         <div class="col">
-            <div>
-               <h3>Home</h3>
+               <div style="padding-left: 100px; width: 50%;">
+                <h3>Home</h3>
                 <p>Welcome! CWNU 과제용 홈페이지입니다.</p>
-                <div>
-                    <img src="lava.jpg" alt="lava" width="500" height="500">
+                <img src="lava.jpg" alt="lava" width="500" height="500">
                 </div>
-            </div>
         </div>
     </div>
 
