--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>암석의 세계</title>
-       <form action="https://search.naver.com/search.naver">
+       <form action="https://search.google.com/search.google">
             <div class="search">
                 <input type="text" name="query" value="">
-                <button type="submit">검색</button>
+                <button type="submit">search</button>
             </div>
         </form>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet"
