--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <div id="Home" class="tabcontent">
         <div class="col">
-               <div style="padding-left: 100px; width: 50%;">
+               <div style="padding-left: 200px;">
                 <h3>Home</h3>
                 <p>Welcome! CWNU 과제용 홈페이지입니다.</p>
                 <img src="lava.jpg" alt="lava" width="500" height="500">
