--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>암석의 세계</title>
-       <form action="https://search.google.com/search.google">
-            <div class="search">
-                <input type="text" name="query" value="">
-                <button type="submit">search</button>
-            </div>
-        </form>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet"
         type="text/css">
     <link rel="stylesheet" href="main.css">
@@ -84,7 +78,14 @@
     <button class="tablink" onclick="openPage('Astone', this, 'darksalmon')">Igneous Rock</button>
     <button class="tablink" onclick="openPage('Bstone', this, 'sandybrown')">Metamorphic Rock</button>
     <button class="tablink" onclick="openPage('Cstone', this, 'orange')">Sedimentary Rock</button>
-
+    
+    <form action="https://search.google.com/search">
+            <div class="search">
+                <input type="text" name="query" value="">
+                <button type="submit">search</button>
+            </div>
+    </form>
+    
     <div id="Home" class="tabcontent">
         <div class="col">
                <div style="padding-left: 200px;">
