--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     
     <div id="Home" class="tabcontent">
         <div class="col">
-               <div style="padding-left: 200px;">
-                <h3>Home</h3>
-                <p>Welcome! CWNU 과제용 홈페이지입니다.</p>
+               <div style="text-align:center">
+                <h3>Welcome!</h3>
+                <p>CWNU 과제용 홈페이지입니다.</p>
                 <img src="lava.jpg" alt="lava" width="500" height="500">
                 </div>
         </div>
