--- a/index.html
+++ b/index.html
@@ -108,23 +108,30 @@
                 </div>
             </div>
             <div style="padding-left: 100px; width: 50%;">
+                <p> Learn More </p>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Basalt" target = "parent" >  &gt; Basalt </A> </h4>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Granite" target = "parent" >  &gt; Granite </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Gabbro" target = "parent" >  &gt; Gabbro </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Rhyolite" target = "parent" >  &gt; Rhyolite </A> </h4>
             </div>
         </div>
     </div>
 
     <div id="Bstone" class="tabcontent">
         <div class="col">
-            <div>
+            <div style="padding-left: 100px;">
                 <h3>Metamorphic Rock</h3>
                 <p>Metamorphic rocks arise from the transformation of existing rock to new types of rock, in a process called metamorphism.</p>
                 <div>
                     <img src="Rock1.jpg" alt="변성암" width="300" height="300">
                 </div>
             </div>
-            <div>
-                <h4> <A href = "URL" target = "링크 방법" > 글 내용 </A> </h4>
+            <div style="padding-left: 100px; width: 50%;">
+                <p> Learn More </p>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Quartzite" target = "parent" >  &gt; Quartzite </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Marble" target = "parent" >  &gt; Marble </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Gneiss" target = "Gneiss" >  &gt; Gabbro </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Schist" target = "parent" >  &gt; Schist </A> </h4>
             </div>
         </div>
     </div>
