--- a/index.html
+++ b/index.html
@@ -137,23 +137,21 @@
     </div>
     <div id="Cstone" class="tabcontent">
         <div class="col">
-            <div>
-                <h3>Sedimentary rock is formed by the accumulation or deposition of mineral or organic particles at Earth's surface, followed by cementation.</h3>
-                <p>Who we are and what we do.</p>
+           <div style="padding-left: 100px;">
+                <h3>Sedimentary rock</h3>
+                <p>Sedimentary rock is formed by the accumulation or deposition of mineral or organic particles at Earth's surface, followed by cementation.</p>
                 <div>
-                    <p>Hover over the image:</p>
                     <img src="Rock2.jpg" alt="퇴적암" width="300" height="300">
                 </div>
-            </div>
-            <div>
-                <h4>Description</h4>
+                <div style="padding-left: 100px; width: 50%;">
+                <p> Learn More </p>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Quartzite" target = "parent" >  &gt; Quartzite </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Marble" target = "parent" >  &gt; Marble </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Gneiss" target = "Gneiss" >  &gt; Gabbro </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Schist" target = "parent" >  &gt; Schist </A> </h4>
             </div>
         </div>
     </div>
-
-    <footer>
-        <p>©Copyright 2050 by nobody. All rights reversed.</p>
-    </footer>
 
 </body>
 
