--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div style="padding-left: 100px; width: 50%;">
-                <p> Learn More </p>
+                <h3> Learn More! </h3>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Basalt" target = "parent" >  &gt; Basalt </A> </h4>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Granite" target = "parent" >  &gt; Granite </A> </h4>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Gabbro" target = "parent" >  &gt; Gabbro </A> </h4>
