--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <img src="Rock1.jpg" alt="변성암" width="300" height="300">
                 </div>
             </div>
-            <div style="padding-left: 100px; width: 50%;">
+            <div style="padding-left: 80px; width: 50%;">
                 <p> Learn More </p>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Quartzite" target = "parent" >  &gt; Quartzite </A> </h4>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Marble" target = "parent" >  &gt; Marble </A> </h4>
@@ -143,12 +143,11 @@
                 <div>
                     <img src="Rock2.jpg" alt="퇴적암" width="300" height="300">
                 </div>
-                <div style="padding-left: 100px; width: 50%;">
+                <div style="padding-left: 50px; width: 50%;">
                 <p> Learn More </p>
-                <h4> <A href = "https://en.wikipedia.org/wiki/Quartzite" target = "parent" >  &gt; Quartzite </A> </h4>
-                <h4> <A href = "https://en.wikipedia.org/wiki/Marble" target = "parent" >  &gt; Marble </A> </h4>
-                <h4> <A href = "https://en.wikipedia.org/wiki/Gneiss" target = "Gneiss" >  &gt; Gabbro </A> </h4>
-                <h4> <A href = "https://en.wikipedia.org/wiki/Schist" target = "parent" >  &gt; Schist </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Sandstone" target = "parent" >  &gt; Sadnstone </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Conglomerate" target = "parent" >  &gt; Conglomerate </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Gneiss" target = "Mudrocks" >  &gt; Mudrocks </A> </h4>
             </div>
         </div>
     </div>
