--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </div>
             </div>
             <div style="padding-left: 80px; width: 50%;">
-                <p> Learn More </p>
+                <h3> Learn More! </h3>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Quartzite" target = "parent" >  &gt; Quartzite </A> </h4>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Marble" target = "parent" >  &gt; Marble </A> </h4>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Gneiss" target = "Gneiss" >  &gt; Gabbro </A> </h4>
@@ -144,7 +144,7 @@
                     <img src="Rock2.jpg" alt="퇴적암" width="300" height="300">
                 </div>
                 <div style="padding-left: 50px; width: 50%;">
-                <p> Learn More </p>
+                <h3> Learn More! </h3>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Sandstone" target = "parent" >  &gt; Sadnstone </A> </h4>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Conglomerate" target = "parent" >  &gt; Conglomerate </A> </h4>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Gneiss" target = "Mudrocks" >  &gt; Mudrocks </A> </h4>
