--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </div>
     <div id="Cstone" class="tabcontent">
         <div class="col">
-           <div style="padding-left: 100px;">
+           <div style="padding-left: 100px; width: 50%;">
                 <h3>Sedimentary rock</h3>
                 <p>Sedimentary rock is formed by the accumulation or deposition of mineral or organic particles at Earth's surface, followed by cementation.</p>
                 <div>
