--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <h3> Learn More! </h3>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Quartzite" target = "parent" >  &gt; Quartzite </A> </h4>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Marble" target = "parent" >  &gt; Marble </A> </h4>
-                <h4> <A href = "https://en.wikipedia.org/wiki/Gneiss" target = "Gneiss" >  &gt; Gabbro </A> </h4>
+                <h4> <A href = "https://en.wikipedia.org/wiki/Gneiss" target = "Gneiss" >  &gt; Gneiss </A> </h4>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Schist" target = "parent" >  &gt; Schist </A> </h4>
             </div>
         </div>
