--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                 <h4> <A href = "https://en.wikipedia.org/wiki/Sandstone" target = "parent" >  &gt; Sadnstone </A> </h4>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Conglomerate" target = "parent" >  &gt; Conglomerate </A> </h4>
                 <h4> <A href = "https://en.wikipedia.org/wiki/Gneiss" target = "Mudrocks" >  &gt; Mudrocks </A> </h4>
+               </div>
             </div>
         </div>
     </div>
