--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     
     <div id="Home" class="tabcontent">
         <div class="col">
+               <div style="padding-left: 100px;">
                <div style="text-align:center">
                 <h3>Welcome!</h3>
                 <p>CWNU 과제용 홈페이지입니다.</p>
