--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     
     <div id="Home" class="tabcontent">
         <div class="col">
-               <div style="text-align:center">
+               <div style="text-align:center;" "padding-left: 300px;">
                 <h3>Welcome!</h3>
                 <p>CWNU 과제용 홈페이지입니다.</p>
                 <img src="lava.jpg" alt="lava" width="500" height="500">
