--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     
     <div id="Home" class="tabcontent">
         <div class="col">
-               <div style="text-align:center;" "padding-left: 300px;">
+               <div style="text-align:center; padding-left: 300px;">
                 <h3>Welcome!</h3>
                 <p>CWNU 과제용 홈페이지입니다.</p>
                 <img src="lava.jpg" alt="lava" width="500" height="500">
@@ -137,7 +137,7 @@
     </div>
     <div id="Cstone" class="tabcontent">
         <div class="col">
-           <div style="padding-left: 100px; width: 50%;">
+           <div style="padding-left: 100px;">
                 <h3>Sedimentary rock</h3>
                 <p>Sedimentary rock is formed by the accumulation or deposition of mineral or organic particles at Earth's surface, followed by cementation.</p>
                 <div>
