--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="col">
                <div style="text-align:center; padding-left: 300px;">
                 <h3>Welcome!</h3>
-                <p>CWNU 과제용 홈페이지입니다.</p>
+                <p>CWNU ASSIGNMENT HOMEPAGE BY.20208035 JIHYUN KIM</p>
                 <img src="lava.jpg" alt="lava" width="500" height="500">
                 </div>
         </div>
