--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="col">
             <div style="padding-left: 100px;">
                 <h3>Igneous Rock</h3>
-                <p> Igneous rock is formed through the cooling and solidification of magma or lava. </p>
+                <p> <I> Igneous rock is formed through the cooling and solidification of magma or lava.</I> </p>
                 <div>
                     <img src="Rock.jpg" alt="화성암" width="500" height="500">
                 </div>
@@ -121,7 +121,7 @@
         <div class="col">
             <div style="padding-left: 100px;">
                 <h3>Metamorphic Rock</h3>
-                <p>Metamorphic rocks arise from the transformation of existing rock to new types of rock, in a process called metamorphism.</p>
+                <p> <I> Metamorphic rocks arise from the transformation of existing rock to new types of rock, in a process called metamorphism.</I> </p>
                 <div>
                     <img src="Rock1.jpg" alt="변성암" width="500" height="500">
                 </div>
@@ -139,7 +139,7 @@
         <div class="col">
            <div style="padding-left: 100px;">
                 <h3>Sedimentary rock</h3>
-                <p>Sedimentary rock is formed by the accumulation or deposition of mineral or organic particles at Earth's surface, followed by cementation.</p>
+                <p> <I> Sedimentary rock is formed by the accumulation or deposition of mineral or organic particles at Earth's surface, followed by cementation. </I></p>
                 <div>
                     <img src="Rock2.jpg" alt="퇴적암" width="500" height="500">
                 </div>
